# deadkeys

./: .gitignore  Cargo.toml
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.jsx  App.tsx  index.tsx  setupProxy.js
frontend/src/components/: Game.tsx  GameCanvas.jsx  GameCanvas.tsx  GameOver.jsx  GameStateManager.tsx  Leaderboard.jsx  Leaderboard.tsx  PlayerState.tsx  StartScreen.jsx
frontend/src/components/Game/: GameCanvas.jsx  GameCanvas.tsx  GameOver.tsx  HealthDisplay.tsx  SoundManager.tsx  Zombie.tsx  types.ts
frontend/src/components/Game/hooks/: useTimer.ts  useZombies.ts
frontend/src/components/Game/utils/: wordUtils.ts
frontend/src/components/Leaderboard/: Leaderboard.tsx
frontend/src/components/UI/: OnboardingScreen.tsx  PVPModeScreen.tsx  StartScreen.tsx
frontend/src/graphql/: client.ts  queries.ts
frontend/src/hooks/: useLeaderboard.ts  usePlayerState.ts
frontend/src/linera/: LineraProvider.tsx
frontend/src/styles/: App.css
frontend/src/types/: react-dom-client.d.ts
frontend/src/utils/: api.ts
src/: contract.rs  lib.rs  models.rs  service.rs  state.rs
