[workspace]
members = [
    ".", # The current directory is the workspace member
]

[workspace.dependencies]
async-graphql = "4.0" # Explicitly define async-graphql version
futures = "0.3"       # Explicitly define futures version
linera-sdk = { path = "../linera-protocol/linera-sdk" } # Define linera-sdk as a workspace dependency
serde_json = "1.0"    # Explicitly define serde_json version
tokio = { version = "1", features = ["rt", "sync"] } # Explicitly define tokio version
assert_matches = "1.5" # Explicitly define assert_matches version

[package]
name = "deadkeys"
version = "0.1.0"
authors = ["Dr.P <doctorphantacy@gmail.com>"]
edition = "2021"

[dependencies]
async-graphql.workspace = true
futures.workspace = true
linera-sdk.workspace = true
serde_json.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { workspace = true, features = ["test", "wasmer"] }
tokio.workspace = true

[dev-dependencies]
assert_matches.workspace = true
linera-sdk = { workspace = true, features = ["test"] }

[[bin]]
name = "deadkeys_contract"
path = "src/contract.rs" # Updated binary name to match your project

[[bin]]
name = "deadkeys_service"
path = "src/service.rs" # Updated binary name to match your project